fix alignment

--- a/client/src/Components/Leaderboard/LeaderBoard.css
+++ b/client/src/Components/Leaderboard/LeaderBoard.css
@@ -1,5 +1,5 @@
 .leader-board {
-  margin-top: -20px;
+  margin-top: 20px;
 }
 table {
   border-radius: 25px;
