--- a/client/src/Components/Login/Login.css
+++ b/client/src/Components/Login/Login.css
@@ -12,7 +12,9 @@
   border-radius: 10px;
   margin: 150px auto;
   padding: 30px 40px;
-  box-shadow: 20px 20px 80px rgb(206, 206, 206)
+  box-shadow: 20px 20px 80px rgb(206, 206, 206);
+  
+ 
 }
 
 h3 {
