--- a/client/src/Components/User/User.css
+++ b/client/src/Components/User/User.css
@@ -1,5 +1,6 @@
 .table {
   padding: 80px;
+  margin-top: 15px;
 }
 
 table {
